<resources>
    <string name="details_of_the_message">Details Of The Message</string>
    <string name="feedback">Feedback</string>
    <string name="commodity_upload">Commodity Upload</string>
    <string name="mine">Mine</string>
    <string name="my_domain">My domain</string>
    <string name="reset_password">Reset password</string>
    <string name="forget_the_password">Forget the password</string>
    <string name="my_account">My Account</string>
    <string name="my_message">我的消息</string>
    <string name="app_name">Business store</string>
    <string name="store_name">Business store</string>
    <string name="no_goods_tips">还没有商品，请尽快上传！</string>
    <string name="upload_goods_tips">上传商品</string>
    <string name="update_password">Modify the password</string>
    <string name="accomplish">Complete</string>
    <string name="Settingcompleted">Setting Complete</string>
    <string name="loginimmediately">立即登录</string>
    <string name="submit">Submit</string>
    <string name="update_phonenum">修改号码</string>
    <string name="update_name">修改昵称</string>
    <string name="please_insert_into_your_name">请输入新的名字</string>
    <string name="comment_details">留言详情</string>
    <string name="phone_num">电话号码:</string>
    <string name="please_insert_into_your_phonenum">请输入电话号码</string>
    <string name="nickname">昵称</string>
    <string name="Please_enter_a_storename">请输入店名</string>
    <string name="After_setting_other_people_will_see_your_storename">设置后,其他人将看到您的店名</string>
    <string name="setting">Setting</string>
    <string name="Feedback">意见反馈</string>
    <string name="update_version">版本更新</string>
    <string name="login_out">退出登录</string>
    <string name="orders">订单</string>
    <string name="Unprocessed_orders">未处理订单</string>
    <string name="Processed_orders">已处理订单</string>
    <string name="All_orders">所有订单</string>
    <string name="selection_period">选择时间</string>
    <string name="open_store">开店</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="mystore_name">店         名</string>
    <string name="Please_enter_your_shop_name">请输入店铺名称</string>
    <string name="p_num">电话号码</string>
    <string name="Business_hours">营业时间</string>
    <string name="Please_fill_in_the_store_business_hours">请填写店铺营业时间</string>
    <string name="Store_location">店铺位置</string>
    <string name="Please_enter_the_store_location">请输入Zipcode</string>
    <string name="create_store_link">Create store link</string>
    <string name="create_your_store_address">创建店铺地址</string>
    <string name="register_Instructions">Please note that is default URL,if you wish to import an exising domain,you may do so in the Mine > My store tab once you are done setting up your store</string>
    <string name="detailed_address">详细地址</string>
    <string name="register_completed">Register completed</string>
    <string name="storename">店名</string>
    <string name="my_address">店铺位置</string>
    <string name="location_fail">定位失败，请重新尝试!</string>
    <string name="third_party_Instructions">Please note that we will only port in existing domain that you own if you need a domain,please purchase a domain from a third party provider then return to this step,Sorry for the inconvenience</string>
    <string name="third_party_two_Instructions">Please go to your existing domain provider using the following information to add new host records.return to this page to vertify your information.Otherwise your domain will not be imported</string>
    <string name="third_party_two_Instructions2">insert direction and info.users need to add new host records</string>
    <string name="third_party_three_Instruction">Your information has been received and is being processed.it takes up to 48 hours to verify.We will notify you bu email once processing is completed.</string>
    <string name="select_address">选择地址</string>
    <string name="register">注册</string>
    <string name="goods_title">全新潮流时尚新款，各个码折扣销售圣诞节全场五折</string>
    <string name="place_an_order">下单了%1$d件</string>
    <string name="message_number">%1$d条留言</string>
    <string name="total_recovery">共%1$d条回复 ></string>
</resources>
