<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:background="@drawable/login_logo"
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <com.businessstore.view.customize.BackImageView
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.businessstore.view.customize.BackImageView>
        <TextView
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/storename"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:layout_marginBottom="13dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/save"
            android:layout_gravity="bottom|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <View
            android:layout_gravity="top"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/line"
            />
        <TextView

            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/storename"
            android:textSize="16sp"
            android:textColor="@color/nav_fontcolor"
            android:layout_width="wrap_content"
            android:layout_height="49dp" />

        <EditText
            android:textSize="14sp"
            android:hint="@string/Please_enter_a_storename"
            android:textColor="@color/q_gray"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:background="@null" />
        <View
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/line"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/mgray"
            android:textSize="14sp"
            android:text="@string/After_setting_other_people_will_see_your_storename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>



</LinearLayout>