<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"



      >
        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/nav_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            >
            <LinearLayout
                android:layout_marginLeft="0dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >
                <ImageView
                    android:id="@+id/nav_personal_btn"
                    android:layout_gravity="center|center_vertical"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:src="@drawable/personal_icon"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:text="@string/store_name"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    />
                <ImageView
                   android:layout_gravity="center_vertical"
                    android:layout_width="12dp"
                    android:layout_height="20dp"
                    android:src="@drawable/search_icon"
                    android:layout_weight="1"/>
                <ImageView

                    android:layout_gravity="center_vertical"
                    android:layout_width="12dp"
                    android:layout_height="20dp"
                    android:src="@drawable/message_icon"
                    android:layout_weight="1"/>
            </LinearLayout>


        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
           <!-- <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"





                >

            </LinearLayout>-->
            <FrameLayout
                android:elevation="5dp"
                android:alpha="250"
                android:transitionGroup="true"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:paddingLeft="18dp"
                    android:layout_gravity="center_vertical|left"
                    android:textColor="@color/mgray"
                    android:textSize="14sp"
                    android:text="你还未登录,请先登录才能使用！"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/main_loginbtn"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right|center_vertical"
                    android:elevation="0dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/logingbtn_border"
                    android:text="登录"
                    android:textColor="@color/nav_color"
                    android:textSize="14sp" />
            </FrameLayout>
            <ImageView
                android:layout_marginTop="150dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/no_goods_icon" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/no_goods_tips"
                android:textSize="16sp"
                android:textColor="#a3a3a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />





        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2">
            <TextView
                android:id="@+id/upload_btn"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="175dp"
                android:layout_height="45dp"
                android:background="@drawable/upload_goods_border"
                android:text="@string/upload_goods_tips"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_toolbar"
        app:headerLayout="@layout/nav_header" />
</android.support.v4.widget.DrawerLayout>

