<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/title"
    >
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/title_layout"
            layout="@layout/title_layout"
            />
    <!--<FrameLayout
        android:background="@drawable/login_logo"
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <com.businessstore.view.customize.BackImageView
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.businessstore.view.customize.BackImageView>
        <TextView
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/open_store"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>-->
    <FrameLayout

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/red"
            android:text="请输入您的店铺名称"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout
       android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:theme="@style/edittextstyle"

            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/Please_enter_your_shop_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/mgray"
            android:textSize="16sp" />
        <View
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            />
    </FrameLayout>
    <FrameLayout

        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/red"
            android:text="请输入您的店铺名称"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <View
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            />

        <EditText
            android:theme="@style/edittextstyle"

            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/please_insert_into_your_phonenum"
            android:inputType="textEmailAddress"
            android:textColor="@color/mgray"
            android:textSize="16sp" />
    </FrameLayout>
    <FrameLayout

        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/red"
            android:text="请输入您的店铺名称"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:theme="@style/edittextstyle"

            android:textColor="@color/mgray"
            android:hint="@string/Please_fill_in_the_store_business_hours"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="50dp"
            android:layout_width="200dp"
            android:layout_height="49dp" />
        <View
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            />
    </FrameLayout>
    <FrameLayout

        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/red"
            android:text="请输入您的店铺名称"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/address_textView"
            android:textColor="@color/mgray"
            android:hint="@string/Please_enter_the_store_location"
            android:gravity="center|left"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="50dp"
            android:layout_width="200dp"
            android:layout_height="49dp" />
        <ImageView
            android:id="@+id/img_btn"
            android:src="@drawable/nav_arrow"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="280dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />
        <View

            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            />
    </FrameLayout>
    <FrameLayout

        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/red"
            android:text="请输入您的店铺名称"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:theme="@style/edittextstyle"

            android:textColor="@color/mgray"
            android:hint="@string/Please_fill_in_the_store_business_hours"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="50dp"
            android:layout_width="200dp"
            android:layout_height="49dp" />
        <View
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            />
    </FrameLayout>
    <FrameLayout

        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/red"
            android:text="请输入您的店铺名称"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/register_one_ensure2"
            android:text="下一步"
            android:gravity="center"

            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/login_btn"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

    </FrameLayout>

    </LinearLayout>

</LinearLayout>